fixed header alignment

--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -30,17 +30,12 @@ p {
 	align-items: center;
 	background: #FFFFFF;
     box-shadow: 0 2px 4px -1px rgba(0,0,0,0.12);
-	display: flex;
+/* 	display: flex; */
 	height: 60px;
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 1;
-}
-
-#header-content {
-  max-width: 1000px;
-  vertical-align: baseline;
 }
 
 .avatar {
@@ -64,7 +59,13 @@ p {
  * top navigation
  */
 .top-nav {
-	flex: 1;
+	display: flex;
+	/* flex: 1; */
+	position: absolute;
+	height: 100%;
+	flex-direction: row;
+    align-items: center;
+	padding-left: 3rem;
 }
 
 .top-nav a {
@@ -77,7 +78,6 @@ p {
 .top-nav img {
 	height: 2rem;
     width: 2rem;
-    margin-left: 2rem;
 }
 
 #welcome-msg {
@@ -370,7 +370,7 @@ footer {
     display:flex;
     flex-direction: row;
     align-items: center;
-    padding-left:50px;
+    padding-left:3rem;
     box-shadow:0 -0.1875rem 0.125rem #efefef;
 }
 #logo {
